--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -20,3 +20,17 @@ a {
     color: #000000;
   }
 }
+
+input,
+select,
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  box-sizing: border-box;
+}
+
+button,
+input[type="submit"] {
+  -webkit-appearance: none;
+}
