--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,13 @@
+html,
+body,
+#root {
+  height: 100%;
+  min-height: 100vh;
+  min-height: 100dvh;
+  margin: 0;
+  padding: 0;
+}
+
 h1 {
   color: $primary-color;
 }
